--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,7 @@
-
-spring.datasource.url=jdbc:postgresql://restaurant-database.postgres.database.azure.com:5432/restaurant
-spring.datasource.username=zekhnine@restaurant-database
+spring.datasource.url=jdbc:postgresql://localhost:5432/restaurant
+spring.datasource.username=postgres
 spring.datasource.password=Marrakech10@//
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
-
-
