--- a/.github/workflows/Ci-restaurant.yml
+++ b/.github/workflows/Ci-restaurant.yml
@@ -27,10 +27,10 @@ jobs:
     needs: compile
     steps:
       - uses: actions/checkout@v2
-      - name: Set up JDK 1.8
-        uses: actions/setup-java@v1
+      - name: Set up JDK 11
+        uses: actions/setup-java@v2
         with:
-          java-version: 1.8
+          java-version: '11'
       - name: Run unit tests
         run: mvn test
   build:
@@ -39,10 +39,10 @@ jobs:
     needs: test
     steps:
       - uses: actions/checkout@v2
-      - name: Set up JDK 1.8
-        uses: actions/setup-java@v1
+      - name: Set up JDK 11
+        uses: actions/setup-java@v2
         with:
-          java-version: 1.8
+          java-version: '11'
       - name: Build with Maven
         run: mvn -B package --file pom.xml -Dmaven.test.skip=true
       - name: generate report codecov
