--- a/.github/workflows/Ci-restaurant.yml
+++ b/.github/workflows/Ci-restaurant.yml
@@ -16,8 +16,7 @@ jobs:
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
-          java-version: '11'
-          distribution: 'adopt'
+          java-version: 11
       - name: Compile code
         run: mvn compile
 
@@ -30,7 +29,7 @@ jobs:
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
-          java-version: '11'
+          java-version: 11
       - name: Run unit tests
         run: mvn test
   build:
@@ -42,7 +41,7 @@ jobs:
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
-          java-version: '11'
+          java-version: 11
       - name: Build with Maven
         run: mvn -B package --file pom.xml -Dmaven.test.skip=true
       - name: generate report codecov
